<resources>
    <string name="app_name">MyLocation</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="txt_appTitle">Nautica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_Confirmpassword">Confirm Password</string>
    <string name="txt_email">Email</string>
    <string name="btn_Signup">Register</string>
    <string name="txt_terms">I agree, terms and conditions</string>
</resources>
